--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,7 +32,7 @@ jobs:
             -Dplatforms=android \
             -Dplatform-sdk-version=27 \
             -Dandroid-stub=true \
-            -Dllvm=enabled \
+            -Dllvm=disabled \
             -Dxlib-lease=disabled \
             -Degl=disabled \
             -Dgbm=disabled \
@@ -40,7 +40,7 @@ jobs:
             -Dopengl=true \
             -Dosmesa=true \
             -Dvulkan-drivers= \
-            -Dgallium-drivers=swrast,swr \
+            -Dgallium-drivers=swr \
             -Dshared-glapi=false \
             -Dbuildtype=release
           ninja -C "build-android" install
