--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,9 @@ jobs:
           pip3 install mako
           export ANDROID_NDK_HOME="$ANDROID_SDK_ROOT/ndk-bundle"
           envsubst <android-${{matrix.arch}} >build-crossfile
-          git clone --depth 1 --branch 21.2 https://gitlab.freedesktop.org/mesa/mesa/
+          git clone --depth 1 --branch 21.2-virgl https://github.com/PojavLauncher/mesa/
+          git clone --depth 1 https://github.com/Vera-Firefly/mesa-build-fix
+          cp -rf mesa-build-fix/* mesa/
           cd mesa
           meson setup "build-android" \
             --prefix=/tmp/mesa \
