--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,7 +42,7 @@ jobs:
           ninja -C "build-android" install
           cd ..
           envsubst <android-${{matrix.arch}} >build-crossfile
-          git clone --depth 1 --branch 21.2-virgl https://github.com/PojavLauncher/mesa
+          git clone --depth 1 --branch 21.2 https://gitlab.freedesktop.org/mesa/mesa
           git clone --depth 1 https://github.com/Vera-Firefly/mesa-build-fix
           cp -rf mesa-build-fix/* mesa/
           cd mesa
