--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,7 +1,7 @@
 name: Build Android
 
 on:
-  workflow_dispatch:
+  [push, workflow_dispath]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
