--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,7 +42,7 @@ jobs:
           ninja -C "build-android" install
           cd ..
           envsubst <android-${{matrix.arch}} >build-crossfile
-          git clone --depth 1 --branch 21.2 https://gitlab.freedesktop.org/mesa/mesa
+          git clone --depth 1 --branch 21.2 https://gitlab.freedesktop.org/mesa/mesa.git
           git clone --depth 1 https://github.com/Vera-Firefly/mesa-build-fix
           cp -rf mesa-build-fix/* mesa/
           cd mesa
@@ -50,7 +50,7 @@ jobs:
             --prefix=/tmp/mesa \
             --cross-file "../build-crossfile" \
             -Dplatforms=android \
-            -Dplatform-sdk-version=27 \
+            -Dplatform-sdk-version=29 \
             -Dandroid-stub=true \
             -Dandroid-libbacktrace=disabled \
             -Dandroid-strict=false \
@@ -62,7 +62,7 @@ jobs:
             -Dopengl=true \
             -Dosmesa=true \
             -Dvulkan-drivers= \
-            -Dgallium-drivers=swr \
+            -Dgallium-drivers=swrast,swr \
             -Dfreedreno-kmds= \
             -Dshared-glapi=false \
             -Dbuildtype=release
