--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,10 +35,8 @@ jobs:
             -Damdgpu=disabled \
             -Dnouveau=disabled \
             -Dvmwgfx=disabled \
-            -Dfreedreno=disabled \
             -Dvc4=disabled \
-            -Detnaviv=disabled \
-            -Dfreedreno-kgsl=false
+            -Detnaviv=disabled
           ninja -C "build-android" install
           cd ..
           envsubst <android-${{matrix.arch}} >build-crossfile
@@ -63,7 +61,6 @@ jobs:
             -Dosmesa=true \
             -Dvulkan-drivers= \
             -Dgallium-drivers=swrast,swr \
-            -Dfreedreno-kmds= \
             -Dshared-glapi=false \
             -Dbuildtype=release
           ninja -C "build-android" install
