--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,6 +2,7 @@ name: Build Android
 
 on:
   workflow_dispatch:
+  push:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
@@ -50,8 +51,8 @@ jobs:
             -Dplatforms=android \
             -Dplatform-sdk-version=29 \
             -Dandroid-stub=true \
-            -Dandroid-libbacktrace=disabled \
-            -Dandroid-strict=false \
+            #-Dandroid-libbacktrace=disabled \
+            #-Dandroid-strict=false \
             -Dxlib-lease=disabled \
             -Degl=disabled \
             -Dgbm=disabled \
