--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,12 +2,13 @@ name: Build Android
 
 on:
   workflow_dispatch:
+  push:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     strategy:
       matrix:
-        arch: [ "arm32", "aarch64", "x86_64"]
+        arch: [ "aarch64" ]
       fail-fast: false
 
     name: "Build for ${{matrix.arch}}"
@@ -35,22 +36,20 @@ jobs:
             -Damdgpu=disabled \
             -Dnouveau=disabled \
             -Dvmwgfx=disabled \
-            -Dfreedreno=enabled \
             -Dvc4=disabled \
             -Detnaviv=disabled \
-            -Dfreedreno-kgsl=true
           ninja -C "build-android" install
           cd ..
           envsubst <android-${{matrix.arch}} >build-crossfile
-          git clone --depth 1 --branch mesa-24.0.3 https://gitlab.freedesktop.org/mesa/mesa
-          git clone --depth 1 --branch 24.0.3 https://github.com/Vera-Firefly/mesa-build-fix
+          git clone --depth 1 --branch mesa-21.2 https://gitlab.freedesktop.org/mesa/mesa
+          git clone --depth 1 https://github.com/Vera-Firefly/mesa-build-fix
           cp -rf mesa-build-fix/* mesa/
           cd mesa
           meson setup "build-android" \
             --prefix=/tmp/mesa \
             --cross-file "../build-crossfile" \
             -Dplatforms=android \
-            -Dplatform-sdk-version=25 \
+            -Dplatform-sdk-version=29 \
             -Dandroid-stub=true \
             -Dandroid-libbacktrace=disabled \
             -Dandroid-strict=false \
@@ -62,8 +61,7 @@ jobs:
             -Dopengl=true \
             -Dosmesa=true \
             -Dvulkan-drivers= \
-            -Dgallium-drivers=freedreno,zink \
-            -Dfreedreno-kmds=kgsl \
+            -Dgallium-drivers=swrast,swr \
             -Dshared-glapi=false \
             -Dbuildtype=release
           ninja -C "build-android" install
