--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,24 +24,24 @@ jobs:
           sudo apt install -y libxrandr-dev libxxf86vm-dev libxcb-*-dev libx11-xcb-dev libxfixes-dev libdrm-dev libx11-dev
           pip3 install mako meson ninja
           export ANDROID_NDK_HOME="$ANDROID_SDK_ROOT/ndk-bundle"
-          #envsubst <android-drm-${{matrix.arch}} >build-crossfile-drm
-          #git clone --depth 1 https://gitlab.freedesktop.org/mesa/drm.git
-          #cd drm
-          #meson setup "build-android" \
-          #  --prefix=/tmp/drm-static \
-          #  --cross-file "../build-crossfile-drm" \
-          #  -Ddefault_library=static \
-          #  -Dintel=disabled \
-          #  -Dradeon=disabled \
-          #  -Damdgpu=disabled \
-          #  -Dnouveau=disabled \
-          #  -Dvmwgfx=disabled \
-          #  -Dvc4=disabled \
-          #  -Detnaviv=disabled
+          envsubst <android-drm-${{matrix.arch}} >build-crossfile-drm
+          git clone --depth 1 https://gitlab.freedesktop.org/mesa/drm.git
+          cd drm
+          meson setup "build-android" \
+            --prefix=/tmp/drm-static \
+            --cross-file "../build-crossfile-drm" \
+            -Ddefault_library=static \
+            -Dintel=disabled \
+            -Dradeon=disabled \
+            -Damdgpu=disabled \
+            -Dnouveau=disabled \
+            -Dvmwgfx=disabled \
+            -Dvc4=enabled \
+            -Detnaviv=disabled
           #ninja -C "build-android" install
           cd ..
           envsubst <android-${{matrix.arch}} >build-crossfile
-          git clone --depth 1 --branch 21.2 https://gitlab.freedesktop.org/mesa/mesa.git
+          git clone --depth 1 --branch 24.1 https://gitlab.freedesktop.org/mesa/mesa.git
           #git clone --depth 1 https://github.com/Vera-Firefly/mesa-build-fix
           #cp -rf mesa-build-fix/* mesa/
           cd mesa
@@ -61,7 +61,7 @@ jobs:
             -Dopengl=true \
             -Dosmesa=true \
             -Dvulkan-drivers= \
-            -Dgallium-drivers=swrast,swr \
+            -Dgallium-drivers=v3d \
             -Dshared-glapi=false \
             -Dbuildtype=release
           ninja -C "build-android" install
