--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,7 +62,7 @@ jobs:
             -Dosmesa=true \
             -Dvulkan-drivers= \
             -Dgallium-drivers=v3d \
-            -Dshared-glapi=false \
+            -Dshared-glapi=disabled \
             -Dbuildtype=release
           ninja -C "build-android" install
           cp /tmp/mesa/lib/libOSMesa.so.8.0.0 /tmp/mesa/lib/libOSMesa_8.so
