--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,7 +63,7 @@ jobs:
             -Dopengl=true \
             -Dosmesa=true \
             -Dvulkan-drivers= \
-            -Dgallium-drivers=virgl \
+            -Dgallium-drivers=panfrost \
             -Dfreedreno-kmds= \
             -Dshared-glapi=false \
             -Dbuildtype=release
