--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,7 +62,7 @@ jobs:
             -Dllvm=disabled \
             -Dopengl=true \
             -Dosmesa=true \
-            -Dvulkan-drivers=virtio \
+            -Dvulkan-drivers=swast \
             -Dgallium-drivers= \
             -Dfreedreno-kmds= \
             -Dshared-glapi=false \
