--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -65,7 +65,7 @@ jobs:
             -Dvulkan-drivers= \
             -Dgallium-drivers=zink \
             -Dfreedreno-kmds= \
-            -Dshared-glapi=false \
+            -Dshared-glapi=true \
             -Dbuildtype=release
           ninja -C "build-android" install
           cp /tmp/mesa/lib/libOSMesa.so.8.0.0 /tmp/mesa/lib/libOSMesa_8.so
